[package]
name = "babysaylor_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "babysaylor_core"

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.1", features = ["associated_token", "token", "idl-build"] }
solana-program = "1.18.26"

[features]
no-entrypoint = []
idl-build = ["anchor-spl/idl-build"]
default = []
